# AIML589

./: .gitignore  .pre-commit-config.yaml  James-Thompson-AIML589-resources.tex.tex  LICENSE  Makefile  README.md  pyproject.toml  references.bib  resources.tex
code/training-dataset/: .gitignore  README.md  build_dataset.py  cluster_respondents.py  wrangle_response_data.py
code/training-dataset/input/: .gitignore
code/training-dataset/output/: cluster_assignments.csv  empirical_cluster_distributions.json  prompt_templates.json  question_mapping.json  stepmix_model_k2.joblib
code/training-dataset/output/clusters/: README.md  cluster_assignments.csv  cluster_response_distributions.json  empirical_cluster_distributions.json  model_selection_sweep.csv  question_informativeness.csv  stepmix_model_k2.joblib
code/training-dataset/output/dataset/: README.md
code/training-dataset/output/dataset/distributional/test/: cluster_0.parquet  cluster_1.parquet  overall.parquet
code/training-dataset/output/dataset/distributional/train/: cluster_0.parquet  cluster_1.parquet  overall.parquet
code/training-dataset/output/dataset/single_modal/test/: cluster_0.parquet  cluster_1.parquet  overall.parquet
code/training-dataset/output/dataset/single_modal/train/: cluster_0.parquet  overall.parquet  (+1 more)
docs/: common.tex  ethics-application.tex  references.bib  two-pager-funding.tex
docs/report/: report.tex
docs/report/chapters/: acknowledge.tex  conclusion.tex  introduction.tex
survey/: hec-template-for-anonymous-surveys.docx  participant-information-sheet.tex  survey-mockup.tex
(+6 files in other folders)
